# opengl-procedural-terrain

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  vcpkg.json
include/: mesh.h  utils.h
resources/shaders/: terrain.frag  terrain.vert
src/: camera.cpp  main.cpp  mesh.cpp  shaders.cpp  utils.cpp
vs2022/: OpenGL-Project-Template.sln  OpenGL-Project-Template.vcxproj  OpenGL-Project-Template.vcxproj.filters  vs-files-initializer.sh
